# OpenGL-Clion-Complete-Configuration

./: README.md
OpenGL-CLion-Template/: CMakeLists.txt
OpenGL-CLion-Template/src/: main.cpp
